--- a/src/scheduler/tpl/item.hbs
+++ b/src/scheduler/tpl/item.hbs
@@ -1,2 +1,2 @@
-<div class="item-name">{{ item.name }}</div>
-<div class="item-subname">{{ item.subname }}</div>
+<div class="item-name">{{ item.style }}</div>
+<div class="item-subname">{{ item.trainer }}</div>
