--- a/src/scheduler/tpl/listBlock.hbs
+++ b/src/scheduler/tpl/listBlock.hbs
@@ -1,9 +1,9 @@
 <div class="list-block">
  <h4 class="item-name lead">
-    {{ item.name }}
+    {{ item.style }}
     <small>
       {{ day.name }}
-      {{ interval.start }} - {{ interval.end }}
+      {{ time }} - {{ timeEnd }}
     </small>
   </h4>
   <ul class="list-block-content list-group"></ul>
