--- a/src/scheduler/tpl/listMain.hbs
+++ b/src/scheduler/tpl/listMain.hbs
@@ -2,5 +2,5 @@
 </div>
 
 <div class="list-ctrls hidden pull-right">
-  <label class="btn btn-success btn-save">Поехали</label>
+  <label class="btn btn-success btn-save">Сохранить</label>
 </div>
