--- a/src/scheduler/tpl/popup.hbs
+++ b/src/scheduler/tpl/popup.hbs
@@ -1,12 +1,12 @@
 <div class="item-data">
   <h3 class="item-name lead">
-    {{ schedule.item.name }}
+    {{ schedule.item.style }}
     <small>
       {{ schedule.day.name }}
-      {{ schedule.interval.start }} - {{ schedule.interval.end }}
+      {{ schedule.time }} - {{ schedule.timeEnd }}
     </small>
   </h3>
-  <p class="item-desc">{{ schedule.item.desc }}</p>
+  <p class="item-desc">{{ schedule.item.description }}</p>
 </div>
 <!--
 <div class="schedule-data">
