--- a/src/scheduler/styles/scheduler.less
+++ b/src/scheduler/styles/scheduler.less
@@ -47,16 +47,19 @@ body {
     .interval-content {
       background: @cell-bg;
       height: 75px;
+      position: relative;
     }
   }
 
   .schedule-item {
     width: 100%;
-    height: 100%;
+    // height: 100%;
     background: @cell-item-bg;
     text-align: center;
     cursor: pointer;
     padding: 5px;
+    position: absolute;
+    z-index: 100;
 
     .item-name {
       margin-bottom: 5px;
@@ -134,6 +137,7 @@ body {
   .week {
     float: left;
     width: @right-side-width;
+    margin-bottom: 25px;
 
     .day {
       float: left;
