--- a/src/scheduler/tpl/scheduler.hbs
+++ b/src/scheduler/tpl/scheduler.hbs
@@ -1,5 +1,3 @@
-
-
 <div>
   <div class="col col-xs-12 col-md-10 col-lg-8">
 
@@ -7,11 +5,11 @@
       <select class="filter-select form-control">
         <option value=""></option>
         {{#each items}}
-          <option value="{{id}}">{{name}}</option>
+          <option value="{{id}}">{{style}}</option>
         {{/each}}
       </select>
     </div>
-    
+
     <div class="scheduler">
       <div class="header">
         <div class="corner"></div>
